--- a/redhat/Dockerfile
+++ b/redhat/Dockerfile
@@ -3,4 +3,5 @@
 FROM registry.access.redhat.com/ubi7:latest
 
 CMD ["/bin/bash", "-c", "sleep infinity"]
-# CMD ["/bin/bash", "-c", "--", "while true; do sleep 30; done;"]
+# Remove the # from the start of the following line (originally line 6 in Dockerfile) to make the instruction executable
+CMD ["/bin/bash", "-c", "--", "while true; do sleep 30; done;"]
